# xfeatc

./: .gitignore  CMakeLists.txt  DetectDemo.cc  FIXES.md  MatchDemo.cc  MatchRefine.cc  README.md  testDemo.cc
_configs/: capture_params_opt.yaml
camera_opt/: CMakeLists.txt  OptCamera.cpp  camera_config.txt  grab.cpp
camera_opt/include/: OPTApi.h  OptCamera.h  camera_opt.h
camera_opt/lib/: OPTSDK.lib
camera_opt/src/: camera_opt.cpp
camera_opt/test/: live_view.cpp
src/: Matcher.cc  Matcher.h  XFeat.cc
